kubernates/practice/network-policy/my-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy
spec:
  podSelector: 
    matchLabels: 
      app: secure-app
  policyTypes:
  # incomming traffic
  - Ingress
  # outgoing traffic
  - Egress
  ingress:
  - from: 
    - podSelector: 
        matchLabels:
          allow-access: "true"
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - podSelector:
        matchLabels:
          allow-access: "true"
    ports:
    - protocol: TCP
      port: 80
